--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 streamlit
-Pillow
-google-auth
-google-api-python-client
-openai
+pandas
+openpyxl
 fpdf
+google-api-python-client
+google-auth
+google-auth-httplib2
+httplib2
+openai
+Pillow
